Update fonts loaded class and make sure font-family styles are wrapped in .fonts-loaded

--- a/assets/scss/config/_mixins.scss
+++ b/assets/scss/config/_mixins.scss
@@ -20,7 +20,10 @@
   border: 2px solid lighten($button-color, 10%);
   padding: $sml $h4;
   display: inline-block;
-  font-family: $form-font;
+
+  .fonts-loaded & {
+    font-family: $form-font;
+  }
 
 	&:hover,
 	&:focus {
