--- a/assets/scss/config/_variables.scss
+++ b/assets/scss/config/_variables.scss
@@ -97,10 +97,7 @@ $h6:  				$base;
 
 // Fonts
 
-$serif:             'henriette';
-// $sans-serif:        'adelle-sans';
-// $sans-serif: 				'Interface', Arial, sans-serif;
-$sans-serif: 				'adelle-sans', Arial, sans-serif;
+$sans-serif: 				'Inter UI', 'system', Arial, sans-serif;
 
 $heading-font-fallback: 'Helvetica', sans-serif;
 $body-font-fallback:    'system', sans-serif;
