--- a/assets/scss/elements/_typography.scss
+++ b/assets/scss/elements/_typography.scss
@@ -1,4 +1,4 @@
-/* Define the "system" font family */
+// Define the "system" font family
 @font-face {
   font-family: system;
   font-style: normal;
@@ -30,7 +30,7 @@ body {
 	font-size: $base;
 	font-family: $body-font-fallback;
 
-	.wf-active & {
+	.fonts-loaded & {
 		font-family: $body-font;
 	}
 }
